# assessment-firmable

./: .dockerignore  DockerFIle  README.md  main.py  pyproject.toml
assessment_firmable/: main.py
