[tool.poetry]
name = "assessment-firmable"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.10.4"
python-dotenv = "^1.0.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
